# rpm

./: .gitignore  Cargo.toml  Makefile  README.md  rofintegration.sh  rpm_rofi  tags
rofi_themes/: list.rasi  warning.rasi
src/: lib.rs  libs.rs
