[package]
name = "rpm"
version = "0.1.0"
authors = ["nagy135 <viktor.nagy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
rpassword = "0.0.4"

[[bin]]
name = "rpd"

[[bin]]
name = "rpc"
